--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body> 
+  <div class="toggle-container">
+  <label class="switch">
+    <input type="checkbox" id="theme-toggle">
+    <span class="slider round"></span>
+  </label>
+  <span class="mode-label">Light Mode</span>
+</div>
   <div class="container">
     <h2>Currency Converter</h2>
     <form>
@@ -39,7 +46,9 @@
       <button>Get Exchange Rate</button>
     </form>
   </div>
-  <!-- <script src="codes.js"></script> -->
-  <script src="app.js"></script>
+  <footer class="footer">
+  <p>&copy; 2025 Currency Converter App. Created by Shivam Yadav.</p>
+</footer>
+ <script src="app.js"></script>
 </body>
 </html>
